<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/home_left_top_one">
        <menu>
            <item
                android:id="@+id/drawer_zhihu"
                android:icon="@mipmap/ic_drawer_zhihu"
                android:checkable="true"
                android:checked="true"
                android:title="@string/home_left_one"/>
            <item
                android:id="@+id/drawer_wechat"
                android:icon="@mipmap/ic_drawer_wechat"
                android:checkable="true"
                android:title="@string/home_left_two"/>
            <item
                android:id="@+id/drawer_gank"
                android:icon="@mipmap/ic_drawer_gank"
                android:checkable="true"
                android:title="@string/home_left_three"/>
            <item
                android:id="@+id/drawer_gold"
                android:icon="@mipmap/ic_drawer_gold"
                android:checkable="true"
                android:title="@string/home_left_four"/>
            <item
                android:id="@+id/drawer_vtex"
                android:icon="@mipmap/ic_drawer_vtex"
                android:checkable="true"
                android:title="@string/home_left_five"/>
        </menu>
    </item>
    <item android:title="@string/home_left_top_two">
        <menu>
            <item
                android:id="@+id/drawer_like"
                android:icon="@mipmap/ic_drawer_like"
                android:checkable="true"
                android:title="@string/home_left_six"/>
            <item
                android:id="@+id/drawer_setting"
                android:checked="false"
                android:icon="@mipmap/ic_drawer_setting"
                android:checkable="true"
                android:title="@string/home_left_seven"/>
            <item
                android:id="@+id/drawer_about"
                android:icon="@mipmap/ic_drawer_about"
                android:checkable="true"
                android:title="@string/home_left_eight"/>
        </menu>
    </item>
</menu>